tolk-tester/tests/invalid-symbol/err-2750.tolk
fun main() {
    var tri: [int, scli] = [10, null()];
    return;
}

/**
@compilation_should_fail
@stderr .tolk:2
@stderr unknown type name `scli`
 */
